--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,19 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+</head>
+<body>
+    <header class ='header'>
+
+    </header>
+    <div class ='center'>
+        
+    </div>
+    <footer class ='footer'>
+
+    </footer>
+</body>
+</html>
