--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,24 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class ='shapes'>
+        <div class ='purpleSquare'></div>
+        <div class ='greenSquare'></div>
+        <div class ='blueCircle'></div>
+    </div>
+    <div class ='rectangle'>
+        <div class ='yellowBox'></div>
+    </div>
+    <div class ='hello'>
+        <p>HELLO<br>FRIENDS</P>
+    </div>
+    
+</body>
+</html>
